[DSTEW-POC] Migrate validation v1
